--- a/Profile-Cart/index.html
+++ b/Profile-Cart/index.html
@@ -16,6 +16,12 @@
             <span class="name">Gagan Varshney</span>
             <span class="Job">Student</span>
         </div>
+
+        <div class="media-buttons">
+             <a href="" class="link">
+                
+             </a>
+        </div>
     </div>
 </body>
 </html>
