--- a/Profile-Cart/index.html
+++ b/Profile-Cart/index.html
@@ -16,11 +16,23 @@
             <span class="name">Gagan Varshney</span>
             <span class="Job">Student</span>
         </div>
-
         <div class="media-buttons">
-             <a href="" class="link">
-                
-             </a>
+            <a href="#" style="background: #4267b2;" class="link">
+                <i class='bx bxl-facebook'></i>
+            </a>
+            <a href="#" style="background: #e1306c;" class="link">
+                <i class='bx bxl-instagram'></i>
+            </a>
+            <a href="#" style="background: #1da1f2;" class="link">
+                <i class='bx bxl-twitter' ></i>
+            </a>
+            <a href="#" style="background: #000000;" class="link">
+                <i class='bx bxl-github' ></i>
+            </a>        
+        </div>
+        <div class="buttons">
+            <button class="button">Follow</button>
+            <button class="button">Messge</button>
         </div>
     </div>
 </body>
