--- a/Profile-Cart/index.html
+++ b/Profile-Cart/index.html
@@ -20,7 +20,7 @@
             <a href="#" style="background: #4267b2;" class="link">
                 <i class='bx bxl-facebook'></i>
             </a>
-            <a href="#" style="background: #e1306c;" class="link">
+            <a href="https://www.instagram.com/gagan_.xxi" style="background: #e1306c;" class="link">
                 <i class='bx bxl-instagram'></i>
             </a>
             <a href="#" style="background: #1da1f2;" class="link">
@@ -33,6 +33,20 @@
         <div class="buttons">
             <button class="button">Follow</button>
             <button class="button">Messge</button>
+        </div>
+        <div class="analytics">
+            <div class="data">
+                <i class='bx bx-heart' ></i>
+                <span class="number">60K</span>
+            </div>
+            <div class="data">
+                <i class='bx bx-message-rounded' ></i>
+                <span class="number">20K</span>
+            </div>
+            <div class="data">
+                <i class='bx bx-share' ></i>
+                <span class="number">10K</span>
+            </div>
         </div>
     </div>
 </body>
